scripts/nullaway/nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8.txt
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/ll/LL.java:162: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return collection.get(notEndChar).get(endChar);
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/ll/LL.java:162: error: [NullAway] dereferenced expression collection.get(notEndChar) is @Nullable
        return collection.get(notEndChar).get(endChar);
                                         ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:48: error: [NullAway] initializer method does not guarantee @NonNull field startNewNode (line 41) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public ToDFA(Hashtable<Integer, Node> nodeList, TreeSet<String> input) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:70: error: [NullAway] dereferenced expression nodeList.get(1) is @Nullable
        nodes.add(nodeList.get(1).getValue());
                                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:151: error: [NullAway] enhanced-for expression dtrans.get(key) is @Nullable
            for (Dtran d : dtrans.get(key)) {
                                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:197: error: [NullAway] enhanced-for expression dtrans.get(v) is @Nullable
            for (Dtran d : dtrans.get(v)) {
                                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:218: error: [NullAway] enhanced-for expression dtrans.get(v) is @Nullable
            for (Dtran d : dtrans.get(v)) {
                                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:243: error: [NullAway] dereferenced expression nodeList.get(i) is @Nullable
            TreeSet<Integer> n_1 = nodeList.get(i).getNodeMove("");
                                                  ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:264: error: [NullAway] dereferenced expression nodeList.get(n) is @Nullable
            node.addAll(nodeList.get(n).getNodeMove(tran));
                                       ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/Node.java:58: error: [NullAway] enhanced-for expression enableReachValues.get(i) is @Nullable
            for (String str : enableReachValues.get(i)) {
                                                   ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/test/ReadFile.java:24: error: [NullAway] dereferenced expression dr is @Nullable
            while ((str_ = dr.readLine()) != null) {
                             ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/test/ReadFile.java:42: error: [NullAway] dereferenced expression dr is @Nullable
                dr.close();
                  ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/test/ReadFile.java:65: error: [NullAway] dereferenced expression dr is @Nullable
            while ((str_ = dr.readLine()) != null) {
                             ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/test/ReadFile.java:73: error: [NullAway] dereferenced expression dr is @Nullable
                dr.close();
                  ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/test/Word.java:5: error: [NullAway] @NonNull field name not initialized
    private String name;
                   ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/test/Word.java:8: error: [NullAway] @NonNull field mark not initialized
    private String mark;
                   ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/test/Word.java:10: error: [NullAway] @NonNull field words not initialized
    private String[] words;
                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/test/SignAnalysis.java:50: error: [NullAway] @NonNull field str not initialized
    String str;
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/matcher/Match.java:37: error: [NullAway] initializer method does not guarantee @NonNull fields lastNode (line 21), content (line 27), chList (line 29), tran (line 33) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Match(String str) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/matcher/Match.java:154: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return ds;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/matcher/MatchGroups.java:17: error: [NullAway] initializer method does not guarantee @NonNull field matchString (line 15) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public MatchGroups(LinkedList<K> en) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/matcher/MatchGroups.java:66: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return group.get(i).getString(matchString);
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/matcher/MatchGroups.java:66: error: [NullAway] dereferenced expression group.get(i) is @Nullable
        return group.get(i).getString(matchString);
                           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/K.java:87: error: [NullAway] dereferenced expression nodeList.get(v) is @Nullable
            Enumeration<Integer> keys = nodeList.get(v).getEnableReachValues().keys();
                                                       ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/Unit.java:30: error: [NullAway] initializer method does not guarantee @NonNull field nextUnit (line 19) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Unit(int s, int e, Unit unit) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/MainClass.java:101: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        handle(null, null, 0, 0);
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/MainClass.java:101: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        handle(null, null, 0, 0);
                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/MainClass.java:146: error: [NullAway] passing @Nullable parameter 'unit_now' where @NonNull is required
                Unit unit_1 = handle(unit, unit_now, markNotNextUnit, markAddInnerFistUnitInit);
                                           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/MainClass.java:235: error: [NullAway] dereferenced expression nodeList.get(a) is @Nullable
        nodeList.get(a).addEnableReachValue(b, ch);
                       ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/MainClass.java:276: error: [NullAway] enhanced-for expression td.getDtrans().get(v) is @Nullable
            for (Dtran d : td.getDtrans().get(v)) {
                                             ^
    (see http://t.uber.com/nullaway )
30 errors
